fixed alignment of links

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,30 +2,29 @@ html{
     
   font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
   font-size: 20px;
+  
+}
+#wrapper{
+  display:flex;
+  justify-content: center;
 }
 #flex-container{
   display:flex;
   margin:0;
-  width:100vw;
+  width:30vw;
   max-width:100vw;
   flex-direction: column;
   align-items: center;
 }
-.centered {
-  display: flex;
-  margin-top:5vh;
-  justify-content: center;
-  align-content: center;
-  
-}
+
 h1{
   text-align: center;
 }
 
 .bullet-none{
   list-style-type: none;
-  padding:0;
   margin:0;
+  align-self: flex-start;
 }
 
 .links{
